<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/task_item"
        android:enabled="true"
        android:icon="@drawable/round_task_alt_24"
        android:title="@string/bottom_nav_item_tasks" />

    <item
        android:id="@+id/assigned_item"
        android:enabled="true"
        android:icon="@drawable/baseline_business_center_24"
        android:title="@string/bottom_nav_item_assigned" />

    <item
        android:id="@+id/teams_page"
        android:enabled="true"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/bottom_nav_project" />

    <item
        android:id="@+id/bottom_search"
        android:enabled="true"
        android:icon="@drawable/ic_searchico"
        android:title="@string/bottom_nav_search" />

    <item
        android:id="@+id/tast_creation_item"
        android:enabled="true"
        android:icon="@drawable/baseline_add_box_24"
        android:title="@string/create_task" />

</menu>