<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbg_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <include
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        layout="@layout/action_bar_back"
        />


    <ImageView
        android:id="@+id/splashBg"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:translationX="50dp"
        android:translationY="-60dp"
        android:src="@drawable/curves"
        app:tint="@color/darkTheme_bg" />

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="@dimen/container_layout_margin"
        android:layout_marginTop="@dimen/container_layout_margin"
        android:layout_marginEnd="@dimen/container_layout_margin"
        android:layout_marginBottom="@dimen/container_layout_margin">

        <TextView
            android:id="@+id/signup_title"
            style="@style/LabelStyle"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/signup_title"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/signup_welcome_msg"
            style="@style/LabelStyle"
            android:layout_below="@id/signup_title"
            android:layout_marginTop="16dp"
            android:text="@string/signup_welcome_txt" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextStyle"
            android:layout_below="@id/signup_welcome_msg"
            android:layout_marginTop="16dp"
            android:textColor="@color/primary"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_pass"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_email"
            android:layout_marginTop="16dp"
            android:textColor="@color/primary"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirmation_pass"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_pass"
            android:layout_marginTop="16dp"
            android:textColor="@color/primary"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            style="@style/SolidButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/et_confirmation_pass"
            android:layout_marginTop="20dp"
            android:background="@drawable/solid_bg_orange"
            android:text="@string/signup_btn_label"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22dp" />


        <RelativeLayout
            android:id="@+id/login_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/have_account"
                style="@style/LabelStyle"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/have_account"
                android:textColor="@color/account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login"
                style="@style/LabelStyle"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@id/have_account"
                android:fontFamily="@font/sf_pro_display_medium"
                android:onClick="login"
                android:text="@string/login_label"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
