<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/primary_bg"
    >
    <include
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        layout="@layout/action_bar_back"
        >
    </include>


    <ImageView
        android:id="@+id/splashBg"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:translationX="50dp"
        android:translationY="-60dp"
        android:src="@drawable/curves"
        app:tint="@color/card_bg" />

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="@dimen/container_layout_margin"
        android:layout_marginTop="@dimen/container_layout_margin"
        android:layout_marginEnd="@dimen/container_layout_margin"
        android:layout_marginBottom="@dimen/container_layout_margin">

        <TextView
            android:id="@+id/login_title"
            style="@style/LabelStyle"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/login_title"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/login_welcome_msg"
            style="@style/LabelStyle"
            android:layout_below="@id/login_title"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:text="@string/login_welcome_txt" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/EditTextStyle"
            android:layout_below="@id/login_welcome_msg"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:hint="@string/email_address_hint"
            android:textColor="@color/primary"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pass"
            style="@style/EditTextStyle"
            android:layout_below="@id/et_email"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:hint="@string/password_hint"
            android:textColor="@color/primary"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgot_password"
            style="@style/LabelStyle"
            android:layout_below="@id/et_pass"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/forgot_password"
            android:id="@+id/buttonParent"
            android:visibility="visible"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/SolidButtonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:background="@drawable/solid_bg_orange"
                android:text="@string/login_btn_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22dp" />


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/btn_login"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:indeterminate="true"
                android:layout_marginTop="40dp"
                android:indeterminateTint="@color/primary"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timerParent"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_top_30dp"
            android:layout_below="@id/forgot_password"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timer"
                style="@style/LabelStyle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sfbold"
                android:text="59 sec"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/msg"
                android:layout_width="match_parent"
                style="@style/LabelStyle"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_below="@id/login_title"
                android:text="Please wait, before retrying again" />


        </LinearLayout>




        <RelativeLayout
            android:id="@+id/sign_up_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <TextView
                android:id="@+id/no_account"
                style="@style/LabelStyle"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/no_account"
                android:textColor="@color/account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_up"
                style="@style/LabelStyle"
                android:layout_toEndOf="@id/no_account"
                android:fontFamily="@font/sf_pro_display_medium"
                android:onClick="signup"
                android:text="@string/signup_label"
                android:textColor="@color/primary"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
