<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:background="@color/secondary_bg_black">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/purple"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="10"
        >

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:src="@drawable/baseline_keyboard_arrow_down_24"
            app:tint="@color/dim_primary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/choose_designation"
            android:textColor="@color/better_white"
            android:textSize="18dp" />


        <ImageButton
            android:id="@+id/close_bottm_sheet"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:src="@drawable/baseline_close_24"
            app:tint="@color/dim_primary" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/card_bg"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/tv_designer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_height"
            android:layout_gravity="center"
            android:background="@color/border_zero_alpha"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/designer"
            android:textColor="@color/white"
            android:textSize="@dimen/designation_textsize" />

        <TextView
            android:id="@+id/tv_android_developer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_height"
            android:layout_gravity="center"
            android:background="@color/border_zero_alpha"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/android_developer"
            android:textColor="@color/white"
            android:textSize="@dimen/designation_textsize"/>

        <TextView
            android:id="@+id/tv_web_developer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_height"
            android:layout_gravity="center"
            android:background="@color/border_zero_alpha"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/web_developer"
            android:textColor="@color/white"
            android:textSize="@dimen/designation_textsize" />

        <TextView
            android:id="@+id/tv_programmer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_height"
            android:layout_gravity="center"
            android:background="@color/border_zero_alpha"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/programmer"
            android:textColor="@color/white"
            android:textSize="@dimen/designation_textsize" />

        <TextView
            android:id="@+id/tv_backend_developer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tag_height"
            android:layout_gravity="center"
            android:background="@color/border_zero_alpha"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/backend_developer"
            android:textColor="@color/white"
            android:textSize="@dimen/designation_textsize" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>